agregados estilos para buttons y join

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,6 @@
         <input type="text" placeholder="Enter the room code" name="code" id="code" value="{{code}}" required>
         <button type="submit" name="join" class="join">Join a room</button>
     </div>
-    <button type="submit" name="create">Create a room</button>
+    <button type="submit" name="create" class="create">Create a room</button>
 </form>
 {%endblock%}
