--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .buttons {
     display: flex;
     flex-direction: column;
@@ -12,3 +18,6 @@
     width: 100%;
 }
 
+.create-btn {
+    width: 100%;
+}
