--- a/templates/home.html
+++ b/templates/home.html
@@ -11,5 +11,10 @@
         <button type="submit" name="join" class="join">Join a room</button>
     </div>
     <button type="submit" name="create" class="create-btn">Create a room</button>
+    {% if error %}
+    <ul>
+        <li>{{error}}</li>
+    </ul>
+    {% endif %}
 </form>
 {%endblock%}
