--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@
     <h3>Enter The Chat Room</h3>
     <div>
         <label for="name">Name:</label>
-        <input type="text" placeholder="Pick a name" name="name" id="name" value="{{name}}" required>
+        <input type="text" placeholder="Pick a name" name="name" id="name" value="{{name}}">
     </div>
     <div class="join">
-        <input type="text" placeholder="Enter the room code" name="code" id="code" value="{{code}}" required>
+        <input type="text" placeholder="Enter the room code" name="code" id="code" value="{{code}}">
         <button type="submit" name="join" class="join">Join a room</button>
     </div>
     <button type="submit" name="create" class="create-btn">Create a room</button>
