--- a/templates/room.html
+++ b/templates/room.html
@@ -10,4 +10,11 @@
         <button type="button" name="send" id="send-btn" onClick="sendMessage()">Send</button>
     </div>
 </div>
+<script type="text/javascript">
+    var socketio = io();
+
+    const sendMessage = () => {
+        console.log("send");
+    }
+</script>
 {% endblock %}
