--- a/templates/room.html
+++ b/templates/room.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="message-box">
-    <h2>Chat room: {{room}}</h2>
+    <h2>Chat room: {{code}}</h2>
     <div class="messages" id="messages">
 
     </div>
