--- a/templates/room.html
+++ b/templates/room.html
@@ -9,6 +9,9 @@
         <input type="text" rows="3" placeholder="Message" name="message" id="message">
         <button type="button" name="send" id="send-btn" onClick="sendMessage()">Send</button>
     </div>
+    <div>
+        <button type="button" id="leave-room-btn" onClick="exitRoom()">Leave Room</button>
+    </div>
 </div>
 <script type="text/javascript">
     var socketio = io();
@@ -36,13 +39,19 @@
     const sendMessage = () => {
         const message = document.getElementById("message");
         if (message.value == "") return;
-        socketio.emit("message", {data: message.value});
+        socketio.emit("message", { data: message.value });
         message.value = "";
     };
+
+    const exitRoom = () => {
+        socketio.emit('exit_room', { room: "{{code}}" });
+        window.location.href = '/';
+    };
+
 </script>
 {%for msg in messages%}
-    <script type="text/javascript">
-        createMessage("{{msg.name}}", "{{msg.message}}");
-    </script>
+<script type="text/javascript">
+    createMessage("{{msg.name}}", "{{msg.message}}");
+</script>
 {%endfor%}
 {% endblock %}
